chore: Update navigation menu in index.html and app.js

--- a/index.html
+++ b/index.html
@@ -22,15 +22,11 @@
 
         <ul id="navbar__list">
           <!-- Navigation is built dynamically -->
-          <li><a href="#section1" class="menu__link">Section 1</a></li>
-          <li><a href="#section2" class="menu__link">Section 2</a></li>
-          <li><a href="#section3" class="menu__link">Section 3</a></li>
-          <li><a href="#section4" class="menu__link">Section 4</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <header class="main__hero">
+      <header id="#home" class="main__hero"  >
         <h1>Landing Page</h1>
       </header>
       <!-- Each Section has an ID (used for the anchor) and
