--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   IDs are only used for sections to connect menu achors to sections -->
     <header class="page__header">
       <nav class="navbar__menu">
+        <span class="hamburger">&#9776;</span>
         <!-- Navigation starts as empty UL that will be populated with JS -->
 
         <ul id="navbar__list">
