--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </ul>
       </nav>
     </header>
+    <aside id="sidebar" onclick="closeSidebar()">
+    </aside>
     <main>
       <header id="#home" class="main__hero">
         <h1>Landing Page</h1>
