chore: Update navigation menu styling and functionality

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
           <!-- Navigation is built dynamically -->
         </ul>
       </nav>
+      <aside id="sidebar"><span id="close-sidebar">X</span>
+      </aside>
     </header>
-    <aside id="sidebar" onclick="closeSidebar()">
-    </aside>
+    
     <main>
       <header id="#home" class="main__hero">
         <h1>Landing Page</h1>
