--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
         <!-- Navigation starts as empty UL that will be populated with JS -->
 
         <ul id="navbar__list">
+          <div id="sidebar"><span id="close-sidebar">❌</span></div>
           <!-- Navigation is built dynamically -->
         </ul>
       </nav>
-      <aside id="sidebar"><span id="close-sidebar">X</span>
-      </aside>
     </header>
-    
+
     <main>
       <header id="#home" class="main__hero">
         <h1>Landing Page</h1>
