chore: Update navigation menu styling and functionality

--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@
       </section>
     </main>
     <footer class="page__footer">
-      <p>&copy Udacity</p>
+      <div class="copyright">
+        <p>&copy Udacity</p>
+      </div>
+      <div class="back__top" id="backto__top">🔝</div>
     </footer>
   </body>
 </html>
