--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </p>
         </div>
       </section>
-      <section id="section2" data-nav="Section 2">
+      <section id="section2" data-nav="Section 2" class="your-active-class">
         <div class="landing__container">
           <h2>Section 2</h2>
           <p>
@@ -88,7 +88,7 @@
           </p>
         </div>
       </section>
-      <section id="section3" data-nav="Section 3">
+      <section id="section3" data-nav="Section 3" class="your-active-class">
         <div class="landing__container">
           <h2>Section 3</h2>
           <p>
@@ -114,7 +114,7 @@
           </p>
         </div>
       </section>
-      <section id="section4" data-nav="Section 4">
+      <section id="section4" data-nav="Section 4" class="your-active-class">
         <div class="landing__container">
           <h2>Section 4</h2>
           <p>
